--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "transcendence",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "@fastify/static": "^8.2.0",
-    "fastify": "^5.3.3"
-  }
+	"name": "transcendence",
+	"version": "1.0.0",
+	"scripts": {
+		"build:css": "tailwindcss -i src/styles/input.css -o public/styles.css --minify",
+		"watch:css": "tailwindcss -i src/styles/input.css -o public/styles.css --watch",
+		"build:frontend": "tsc --project tsconfig.front.json",
+		"watch:frontend": "tsc --project tsconfig.front.json --watch",
+		"dev:server": "npx ts-node-dev --respawn --transpile-only --no-clear src/server.ts",
+		"dev": "npx concurrently --raw \"npm run watch:css\" \"npm run watch:frontend\" \"npm run dev:server\"",
+		"preview": "npm run build:css && npm run build:frontend && node dist/server.js"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.0",
+		"concurrently": "^9.2.0",
+		"nodemon": "^3.1.0",
+		"postcss": "^8.4.0",
+		"tailwindcss": "^3.4.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3"
+	}
 }
