--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
 		"tailwindcss": "^3.4.17",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"@fastify/cors": "^11.1.0",
+		"@fastify/static": "^8.2.0",
+		"@types/node": "^24.2.0",
+		"fastify": "^5.4.0",
+		"ts-node-dev": "^2.0.0"
 	}
 }
