--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
 	"name": "transcendence",
 	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
-		"build:css": "tailwindcss -i src/styles/input.css -o public/styles.css --minify",
-		"watch:css": "tailwindcss -i src/styles/input.css -o public/styles.css --watch",
-		"build:frontend": "tsc --project tsconfig.front.json",
-		"watch:frontend": "tsc --project tsconfig.front.json --watch",
-		"dev:server": "npx ts-node-dev --respawn --transpile-only --no-clear src/server.ts",
-		"dev": "npx concurrently --raw \"npm run watch:css\" \"npm run watch:frontend\" \"npm run dev:server\"",
-		"preview": "npm run build:css && npm run build:frontend && node dist/server.js"
+		"build:css": "tailwindcss -i src/frontend/styles/input.css -o public/styles.css --watch",
+		"build:css:prod": "tailwindcss -i src/frontend/styles/input.css -o public/styles.css --minify",
+		"build:frontend": "tsc -p tsconfig.frontend.json",
+		"watch:frontend": "tsc -p tsconfig.frontend.json --watch",
+		"build:backend": "tsc -p tsconfig.backend.json",
+		"watch:backend": "tsx watch src/backend/server.ts",
+		"dev": "concurrently --names \"CSS,FRONT,SERVER\" --prefix-colors \"cyan,magenta,green\" \"npm:build:css\" \"npm:watch:frontend\" \"npm:watch:backend\"",
+		"build": "npm run build:css:prod && tsc -b tsconfig.frontend.json tsconfig.backend.json",
+		"start": "node dist/backend/server.js",
+		"preview": "npm run build && npm start"
 	},
 	"devDependencies": {
+		"@types/node": "^22.10.5",
 		"autoprefixer": "^10.4.21",
 		"concurrently": "^9.2.0",
 		"nodemon": "^3.1.0",
+		"pino-pretty": "^13.1.2",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^3.4.17",
-		"ts-node": "^10.9.2",
+		"tsx": "^4.19.2",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
+		"@fastify/reply-from": "^12.3.1",
 		"@fastify/static": "^8.2.0",
-		"@types/node": "^24.2.0",
-		"fastify": "^5.4.0",
-		"ts-node-dev": "^2.0.0"
+		"fastify": "^5.4.0"
 	}
 }
