--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
-    "esModuleInterop": true
-  }
+	"compilerOptions": {
+		"strict": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"target": "ES2020",
+		"module": "esnext"
+	}
 }
