--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
 		"preview": "npm run build && npm start"
 	},
 	"devDependencies": {
-		"@types/node": "^22.10.5",
+		"@types/bcrypt": "6.0.0",
+		"@types/better-sqlite3": "7.6.13",
+		"@types/node": "^22.18.13",
 		"autoprefixer": "^10.4.21",
 		"concurrently": "^9.2.0",
 		"nodemon": "^3.1.0",
 		"pino-pretty": "^13.1.2",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^3.4.17",
+		"ts-node": "10.9.2",
 		"tsx": "^4.19.2",
 		"typescript": "^5.8.3"
 	},
@@ -29,6 +32,9 @@
 		"@fastify/cors": "^11.1.0",
 		"@fastify/reply-from": "^12.3.1",
 		"@fastify/static": "^8.2.0",
-		"fastify": "^5.4.0"
+		"bcrypt": "6.0.0",
+		"fastify": "^5.4.0",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.7"
 	}
 }
