--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
      dockerfile: Dockerfile
     ports:
       - "${PORT:-3000}:${PORT:-3000}"
+      - "8080:8080"
     volumes:
       - .:/app
       - /app/node_modules
@@ -30,6 +31,7 @@ services:
       - NODE_ENV=development
       - HOST=0.0.0.0
       - PORT=${PORT:-3000}
+      - WS_PORT=8080
     networks:
       - ft_transcendence
     command: npm run dev
