--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/bcrypt": "6.0.0",
 		"@types/better-sqlite3": "7.6.13",
 		"@types/node": "^22.18.13",
+		"@types/ws": "^8.18.1",
 		"autoprefixer": "^10.4.21",
 		"concurrently": "^9.2.0",
 		"nodemon": "^3.1.0",
@@ -35,6 +36,7 @@
 		"bcrypt": "6.0.0",
 		"fastify": "^5.4.0",
 		"sqlite": "^5.1.1",
-		"sqlite3": "^5.1.7"
+		"sqlite3": "^5.1.7",
+		"ws": "^8.18.3"
 	}
 }
