--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+#version: '3.8'
 
 services:
   nginx:
@@ -23,8 +23,8 @@ services:
       - "${PORT:-3000}:${PORT:-3000}"
       - "8080:8080"
     volumes:
-      - .:/app
-      - /app/node_modules
+    #  - .:/app  creer un conflit avec ws et empeche la page de charger
+    #  - /app/node_modules
       - /app/dist
       - /app/public/js
     environment:
