--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
 		"preview": "npm run build && npm start"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "6.0.0",
-		"@types/better-sqlite3": "7.6.13",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^22.18.13",
 		"@types/ws": "^8.18.1",
 		"autoprefixer": "^10.4.21",
@@ -33,8 +32,10 @@
 		"@fastify/cors": "^11.1.0",
 		"@fastify/reply-from": "^12.3.1",
 		"@fastify/static": "^8.2.0",
-		"bcrypt": "6.0.0",
-		"fastify": "^5.4.0",
+		"bcrypt": "^6.0.0",
+		"fastify": "^5.6.1",
+		"fastify-plugin": "5.1.0",
+		"fastify-sqlite-typed": "^5.0.2",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
 		"ws": "^8.18.3"
