--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,4 +15,13 @@ server {
 		proxy_set_header X-Forwarded-Proto https;
 		proxy_redirect off;
 	}
+
+	location /ws/ {
+		proxy_pass http://192.168.0.19:8080;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+	}
 }
