--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - "${PORT:-3000}:${PORT:-3000}"
       - "8080:8080"
     volumes:
-      - .:/app
-      - /app/node_modules
+    #  - .:/app
+    # - /app/node_modules
       - /app/dist
       - /app/public/js
     environment:
