--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
 	}
 
 	location /ws/ {
-		proxy_pass http://192.168.0.104:8080;
+		proxy_pass http://app:8080;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
