2fa + jwt + email + routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,11 @@ services:
       - HOST=0.0.0.0
       - PORT=${PORT:-3000}
       - WS_PORT=8080
+      - JWT_SECRET=${JWT_SECRET}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASS=${SMTP_PASS}
+      - SMTP_PORT=${SMTP_PORT}
     networks:
       - ft_transcendence
     command: npm run dev
