--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^6.0.0",
-		"@types/node": "^22.18.13",
+		"@types/node": "^22.19.1",
+		"@types/nodemailer": "^7.0.4",
 		"@types/ws": "^8.18.1",
 		"autoprefixer": "^10.4.21",
 		"concurrently": "^9.2.0",
@@ -30,12 +31,15 @@
 	},
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
+		"@fastify/jwt": "^10.0.0",
 		"@fastify/reply-from": "^12.3.1",
 		"@fastify/static": "^8.2.0",
 		"bcrypt": "^6.0.0",
+		"dotenv": "^17.2.3",
 		"fastify": "^5.6.1",
 		"fastify-plugin": "5.1.0",
 		"fastify-sqlite-typed": "^5.0.2",
+		"nodemailer": "^7.0.11",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
 		"ws": "^8.18.3"
