--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
 		"@fastify/jwt": "^10.0.0",
+		"@fastify/multipart": "^9.3.0",
 		"@fastify/reply-from": "^12.3.1",
 		"@fastify/static": "^8.2.0",
 		"bcrypt": "^6.0.0",
 		"dotenv": "^17.2.3",
-		"fastify": "^5.6.1",
+		"fastify": "^5.6.2",
 		"fastify-plugin": "5.1.0",
 		"fastify-sqlite-typed": "^5.0.2",
+		"fs": "^0.0.1-security",
 		"nodemailer": "^7.0.11",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
