--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - /app/node_modules
       - /app/dist
       - /app/public/js
+      - ./public/image/avatar:/app/public/image/avatar
+      - /data:/app/data
     environment:
       - NODE_ENV=development
       - HOST=0.0.0.0
