--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,8 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+data/*.sql
 dist/*
 public/*
-!public/image/
+!public/image/*ico
+!public/image/avatar/default/*
