--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASS=${SMTP_PASS}
       - SMTP_PORT=${SMTP_PORT}
+      - BACKEND_URL=${BACKEND_URL}
     networks:
       - ft_transcendence
     command: npm run dev
