--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,14 @@ server {
 		proxy_redirect off;
 	}
 
+	location /api/ {
+		proxy_pass	http://app:3000;
+		proxy_set_header HOST $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
+	}
+
 	location /ws/ {
 		proxy_pass http://app:8080;
 		proxy_http_version 1.1;
