--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASS=${SMTP_PASS}
       - SMTP_PORT=${SMTP_PORT}
-      - BACKEND_URL=${BACKEND_URL}
+      - BACKEND_URL=${LOCAL_IP}
     networks:
       - ft_transcendence
     command: npm run dev
