fix csp, issues -> redirection http -> https

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,41 @@
 server {
+    listen 3000;
+    server_name localhost;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
 	listen 443 ssl;
-	server_name localhost
+	server_name localhost;
 
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/ssl/ft_transcendence.crt;
 	ssl_certificate_key /etc/nginx/ssl/ft_transcendence.key;
+	server_tokens off;
+
+	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
 	location / {
-		# protocole de communication/requete entre nginx et fastify/securite
+		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+		add_header Cache-Control "no-cache, no-store, must-revalidate";
+		add_header Content-Security-Policy "
+			default-src 'self'; 
+			style-src 'self' 'unsafe-inline'; 
+			script-src 'self';
+			connect-src 'self';
+			font-src 'self';
+			img-src 'self' blob:;
+			media-src 'self';
+			manifest-src 'self';
+			frame-ancestors 'none';
+			form-action 'self';
+			child-src 'none';
+			object-src 'none';
+			frame-src 'none';
+		";
+		add_header X-Content-Type-Options "nosniff";
+		add_header X-Frame-Options "DENY";
 		proxy_pass	http://app:3000;
 		proxy_set_header HOST $host;
 		proxy_set_header X-Real-IP $remote_addr;
